# vldb-controller

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-native-release.yml
client/: Cargo.toml  README.md  build.rs
client/proto/v1/: controller.proto
client/src/: client.rs  lib.rs  types.rs
controller/: Cargo.toml  README.md
controller/src/: cli.rs  main.rs  server.rs
controller/src/core/: lancedb.rs  mod.rs  runtime.rs  sqlite.rs
docs/: CLIENT_FFI_API_INTEGRATION.md  CONTROLLER_ARCHITECTURE.md  DOWNSTREAM_IMPACT_REPORT.md
ffi/: Cargo.toml  README.md
ffi/include/: vldb_controller_ffi.h
ffi/src/: lib.rs
proto/v1/: controller.proto
