[workspace]
members = ["client", "controller", "ffi"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["sync", "rt-multi-thread", "macros", "time"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
rusqlite = { version = "0.39.0", features = ["bundled", "column_decltype", "pointer"] }
vldb-sqlite = { git = "https://github.com/OpenVulcan/vldb-sqlite.git", rev = "1d5b399e4ece0ad940bcf1ae144a0bf97b8a3ff6" }
vldb-lancedb = { git = "https://github.com/OpenVulcan/vldb-lancedb.git", rev = "c0a78efc2bd87c9795ccee2a5baebd7c0decc9a3" }

[profile.release]
strip = true
lto = true
codegen-units = 1
