[workspace]
members = ["client", "controller", "ffi"]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/OpenVulcan/vldb-controller"
homepage = "https://github.com/OpenVulcan/vldb-controller"

[workspace.dependencies]
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["sync", "rt-multi-thread", "macros", "time"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
rusqlite = { version = "0.39.0", features = ["bundled", "column_decltype", "pointer"] }
vldb-sqlite = "0.1.5"
vldb-lancedb = "0.1.5"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
