[package]
name = "vldb-controller-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Host-side Rust SDK and gRPC contract bindings for vldb-controller."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["vldb", "controller", "grpc", "sdk"]
categories = ["api-bindings", "database"]

[lib]
name = "vldb_controller_client"
crate-type = ["rlib"]

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
